Closed Bug 553882 Opened 14 years ago Closed 14 years ago

[OS/2] Plugin-related coding errors

Categories

(Core Graveyard :: Widget: OS/2, defect)

x86
OS/2
defect
Not set
normal

Tracking

(status1.9.2 .5-fixed)

RESOLVED FIXED
mozilla1.9.3a5
Tracking Status
status1.9.2 --- .5-fixed

People

(Reporter: dragtext, Assigned: dragtext)

Details

Attachments

(2 files)

This patch fixes 3 plugin-related bugs in nsWindow & nsPluginNativeWindowOS2.

- If a plugin window is destroyed before the page containing it, the window created to clip the plugin remains as an area that is never updated.  This patch adds code to the plugin widget's destructor to destroy the clip window.

- When scrolling, plugin windows that overlap the scrolled area should be invalidated.  This corrects a coding error that caused the window being scrolled to be invalidated rather than the plugins.

- If a plugin is displaying a popup menu, clicking elsewhere on the page dismisses the menu but returns the focus to the plugin rather than the page.  New tests have been added to prevent this.

Note:  all of these bugs exist in 1.9.2;  however a separate patch will be needed.
Attachment #433781 - Flags: review?(wuno)
Attachment #433781 - Flags: review?(wuno) → review+
(In reply to comment #0)
> Created an attachment (id=433781) [details]
> Note:  all of these bugs exist in 1.9.2;  however a separate patch will be
> needed.
Are you planning to write a patch for 1.9.2?
Walter, I don't have a 1.9.2 tree, so could you confirm that these fixes apply & compile properly?  Thanks...
Comment on attachment 436937 [details] [diff] [review]
plugin-related fixes for 1.9.2

Yep, works as a charme
Attachment #436937 - Flags: review+
Attachment #433781 - Attachment description: plugin-related fixes → plugin-related fixes for trunk
Keywords: checkin-needed
http://hg.mozilla.org/mozilla-central/rev/456b934bab9e
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
Whiteboard: [NPOTB]
Whiteboard: [NPOTB] → mozilla-1.9.2 a=OS/2 files only NPOTB
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/63bc0b796424
Keywords: checkin-needed
Whiteboard: mozilla-1.9.2 a=OS/2 files only NPOTB
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: