Bug 553882 - [OS/2] Plugin-related coding errors. r=wuno